{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 315,
  "lineage": "8c5ab959-d05c-1f46-dd84-e38894a70327",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09b5fcb0e9cc64f44",
            "arn": "arn:aws:ec2:ap-southeast-2:423014875604:elastic-ip/eipalloc-09b5fcb0e9cc64f44",
            "domain": "vpc",
            "id": "eipalloc-09b5fcb0e9cc64f44",
            "network_border_group": "ap-southeast-2",
            "public_dns": "ec2-13-237-187-125.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "13.237.187.125",
            "public_ipv4_pool": "amazon",
            "region": "ap-southeast-2",
            "tags": {
              "Name": "eks-eip"
            },
            "tags_all": {
              "Name": "eks-eip"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0eeab253db7e765a9",
            "arn": "arn:aws:ec2:ap-southeast-2:423014875604:instance/i-0b47529d35822a68a",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b47529d35822a68a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0a2c9a63359a9d5bb"
              }
            ],
            "primary_network_interface_id": "eni-0a2c9a63359a9d5bb",
            "private_dns": "ip-192-168-1-157.ap-southeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.1.157",
            "public_dns": "ec2-3-106-190-168.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "3.106.190.168",
            "region": "ap-southeast-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c136464f9688b0b8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ad23fd27aabf930f",
            "tags": {
              "Name": "eks-ec2"
            },
            "tags_all": {
              "Name": "eks-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-060ea906d5da8222b"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "423014875604",
            "id": "i-0b47529d35822a68a",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "aws_security_group.ec2_sg",
            "aws_subnet.public_eks_subnet",
            "aws_vpc.main",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:423014875604:internet-gateway/igw-043b06a774c619084",
            "id": "igw-043b06a774c619084",
            "owner_id": "423014875604",
            "region": "ap-southeast-2",
            "tags": {
              "Name": "eks-internet-gateway"
            },
            "tags_all": {
              "Name": "eks-internet-gateway"
            },
            "vpc_id": "vpc-0988a50b012c5e517"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09b5fcb0e9cc64f44",
            "association_id": "eipassoc-0a36cb28a6bd89004",
            "connectivity_type": "public",
            "id": "nat-02eb5447bcb8313bc",
            "network_interface_id": "eni-03d5eaa626a07e416",
            "private_ip": "192.168.1.182",
            "public_ip": "13.237.187.125",
            "region": "ap-southeast-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0ad23fd27aabf930f",
            "tags": {
              "Name": "eks NAT"
            },
            "tags_all": {
              "Name": "eks NAT"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.gw",
            "aws_subnet.public_eks_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:423014875604:route-table/rtb-0dc898e0f5838d4c2",
            "id": "rtb-0dc898e0f5838d4c2",
            "owner_id": "423014875604",
            "propagating_vgws": [],
            "region": "ap-southeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-043b06a774c619084",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eks-internet-gateway"
            },
            "tags_all": {
              "Name": "eks-internet-gateway"
            },
            "timeouts": null,
            "vpc_id": "vpc-0988a50b012c5e517"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "423014875604",
            "id": "rtb-0dc898e0f5838d4c2",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:423014875604:route-table/rtb-09e07c4996c9eb17d",
            "id": "rtb-09e07c4996c9eb17d",
            "owner_id": "423014875604",
            "propagating_vgws": [],
            "region": "ap-southeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-02eb5447bcb8313bc",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eks-nat-gateway"
            },
            "tags_all": {
              "Name": "eks-nat-gateway"
            },
            "timeouts": null,
            "vpc_id": "vpc-0988a50b012c5e517"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "423014875604",
            "id": "rtb-09e07c4996c9eb17d",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.example",
            "aws_subnet.public_eks_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05f3a242913c8c00a",
            "region": "ap-southeast-2",
            "route_table_id": "rtb-09e07c4996c9eb17d",
            "subnet_id": "subnet-00e0e114f0fa5e2fb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.example",
            "aws_route_table.private-route-table",
            "aws_subnet.private_eks_subnet",
            "aws_subnet.public_eks_subnet",
            "aws_vpc.main",
            "data.aws_availability_zones.asz"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0260b61daf5f77f48",
            "region": "ap-southeast-2",
            "route_table_id": "rtb-09e07c4996c9eb17d",
            "subnet_id": "subnet-00c1ee2c7433e34e6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.example",
            "aws_route_table.private-route-table",
            "aws_subnet.private_eks_subnet",
            "aws_subnet.public_eks_subnet",
            "aws_vpc.main",
            "data.aws_availability_zones.asz"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0592a8e23c0277700",
            "region": "ap-southeast-2",
            "route_table_id": "rtb-09e07c4996c9eb17d",
            "subnet_id": "subnet-080dc5629f06e7e0a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.example",
            "aws_route_table.private-route-table",
            "aws_subnet.private_eks_subnet",
            "aws_subnet.public_eks_subnet",
            "aws_vpc.main",
            "data.aws_availability_zones.asz"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-071bcfa5041ff0505",
            "region": "ap-southeast-2",
            "route_table_id": "rtb-0dc898e0f5838d4c2",
            "subnet_id": "subnet-0ad23fd27aabf930f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.example",
            "aws_subnet.public_eks_subnet",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e22acc118a82689e",
            "region": "ap-southeast-2",
            "route_table_id": "rtb-0dc898e0f5838d4c2",
            "subnet_id": "subnet-091d931fdf0b02862"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.example",
            "aws_subnet.public_eks_subnet",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0df193f65fd551c1b",
            "region": "ap-southeast-2",
            "route_table_id": "rtb-0dc898e0f5838d4c2",
            "subnet_id": "subnet-0b8827548391d1764"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.example",
            "aws_subnet.public_eks_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:423014875604:security-group/sg-060ea906d5da8222b",
            "description": "Allow SSH and HTTP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-060ea906d5da8222b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "eks-ec2-sg",
            "name_prefix": "",
            "owner_id": "423014875604",
            "region": "ap-southeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-ec2-sg"
            },
            "tags_all": {
              "Name": "eks-ec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0988a50b012c5e517"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "423014875604",
            "id": "sg-060ea906d5da8222b",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_eks_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:423014875604:subnet/subnet-00e0e114f0fa5e2fb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "192.168.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00e0e114f0fa5e2fb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "423014875604",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-2",
            "tags": {
              "Name": "eks-private-subnet-1"
            },
            "tags_all": {
              "Name": "eks-private-subnet-1"
            },
            "vpc_id": "vpc-0988a50b012c5e517"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "423014875604",
            "id": "subnet-00e0e114f0fa5e2fb",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.asz"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:423014875604:subnet/subnet-00c1ee2c7433e34e6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "192.168.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00c1ee2c7433e34e6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "423014875604",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-2",
            "tags": {
              "Name": "eks-private-subnet-2"
            },
            "tags_all": {
              "Name": "eks-private-subnet-2"
            },
            "vpc_id": "vpc-0988a50b012c5e517"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "423014875604",
            "id": "subnet-00c1ee2c7433e34e6",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.asz"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:423014875604:subnet/subnet-080dc5629f06e7e0a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2c",
            "availability_zone_id": "apse2-az2",
            "cidr_block": "192.168.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-080dc5629f06e7e0a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "423014875604",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-2",
            "tags": {
              "Name": "eks-private-subnet-3"
            },
            "tags_all": {
              "Name": "eks-private-subnet-3"
            },
            "vpc_id": "vpc-0988a50b012c5e517"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "423014875604",
            "id": "subnet-080dc5629f06e7e0a",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.asz"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_eks_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:423014875604:subnet/subnet-0ad23fd27aabf930f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ad23fd27aabf930f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "423014875604",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-2",
            "tags": {
              "Name": "eks-public-subnet-1"
            },
            "tags_all": {
              "Name": "eks-public-subnet-1"
            },
            "vpc_id": "vpc-0988a50b012c5e517"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "423014875604",
            "id": "subnet-0ad23fd27aabf930f",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:423014875604:subnet/subnet-091d931fdf0b02862",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "192.168.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-091d931fdf0b02862",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "423014875604",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-2",
            "tags": {
              "Name": "eks-public-subnet-2"
            },
            "tags_all": {
              "Name": "eks-public-subnet-2"
            },
            "vpc_id": "vpc-0988a50b012c5e517"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "423014875604",
            "id": "subnet-091d931fdf0b02862",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:423014875604:subnet/subnet-0b8827548391d1764",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "192.168.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b8827548391d1764",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "423014875604",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-2",
            "tags": {
              "Name": "eks-public-subnet-3"
            },
            "tags_all": {
              "Name": "eks-public-subnet-3"
            },
            "vpc_id": "vpc-0988a50b012c5e517"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "423014875604",
            "id": "subnet-0b8827548391d1764",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:423014875604:vpc/vpc-0988a50b012c5e517",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-06cb32e14abfd3a60",
            "default_route_table_id": "rtb-0b7d50058b547fa45",
            "default_security_group_id": "sg-07d7a3bb8ed2a8377",
            "dhcp_options_id": "dopt-03a78733ba5cbfe48",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0988a50b012c5e517",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b7d50058b547fa45",
            "owner_id": "423014875604",
            "region": "ap-southeast-2",
            "tags": {
              "Name": "eks-vpc"
            },
            "tags_all": {
              "Name": "eks-vpc"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:423014875604:security-group/sg-031b28f3b4adab871",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-031b28f3b4adab871",
            "ingress": [],
            "name": "eks-cluster-cluster-20251015154334950100000004",
            "name_prefix": "eks-cluster-cluster-",
            "owner_id": "423014875604",
            "region": "ap-southeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "eks-cluster-cluster",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "eks-cluster-cluster",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0988a50b012c5e517"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "423014875604",
            "id": "sg-031b28f3b4adab871",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:423014875604:security-group/sg-0617929791765f7c9",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-0617929791765f7c9",
            "ingress": [],
            "name": "eks-cluster-node-20251015154333387000000003",
            "name_prefix": "eks-cluster-node-",
            "owner_id": "423014875604",
            "region": "ap-southeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "eks-cluster-node",
              "Terraform": "true",
              "kubernetes.io/cluster/eks-cluster": "owned"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "eks-cluster-node",
              "Terraform": "true",
              "kubernetes.io/cluster/eks-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0988a50b012c5e517"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "423014875604",
            "id": "sg-0617929791765f7c9",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-2824874291",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-southeast-2",
            "security_group_id": "sg-031b28f3b4adab871",
            "security_group_rule_id": "sgr-0130863492635f920",
            "self": false,
            "source_security_group_id": "sg-0617929791765f7c9",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-3040263735",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "region": "ap-southeast-2",
            "security_group_id": "sg-0617929791765f7c9",
            "security_group_rule_id": "sgr-06e2f90bb084b1528",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-1652589919",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-southeast-2",
            "security_group_id": "sg-0617929791765f7c9",
            "security_group_rule_id": "sgr-0dcc014a2dac9612c",
            "self": false,
            "source_security_group_id": "sg-031b28f3b4adab871",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-3676119916",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-southeast-2",
            "security_group_id": "sg-0617929791765f7c9",
            "security_group_rule_id": "sgr-0b752cf43fcd519f7",
            "self": false,
            "source_security_group_id": "sg-031b28f3b4adab871",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-308233466",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-southeast-2",
            "security_group_id": "sg-0617929791765f7c9",
            "security_group_rule_id": "sgr-0542ee8cf6e96aad4",
            "self": false,
            "source_security_group_id": "sg-031b28f3b4adab871",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-17004763",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-southeast-2",
            "security_group_id": "sg-0617929791765f7c9",
            "security_group_rule_id": "sgr-02e534ff28bfbddb8",
            "self": false,
            "source_security_group_id": "sg-031b28f3b4adab871",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-1705134864",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-southeast-2",
            "security_group_id": "sg-0617929791765f7c9",
            "security_group_rule_id": "sgr-09be3198e0621d9e7",
            "self": false,
            "source_security_group_id": "sg-031b28f3b4adab871",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-2879729298",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-southeast-2",
            "security_group_id": "sg-0617929791765f7c9",
            "security_group_rule_id": "sgr-0c2370fdb6d59f8dc",
            "self": false,
            "source_security_group_id": "sg-031b28f3b4adab871",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-3515822676",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-southeast-2",
            "security_group_id": "sg-0617929791765f7c9",
            "security_group_rule_id": "sgr-067e6eb12e700dfaf",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-95835469",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-southeast-2",
            "security_group_id": "sg-0617929791765f7c9",
            "security_group_rule_id": "sgr-0e2859263a665a37a",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-2716464802",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "region": "ap-southeast-2",
            "security_group_id": "sg-0617929791765f7c9",
            "security_group_rule_id": "sgr-04c1aa9c7716f55ce",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks_managed_node_group[\"example\"]",
      "mode": "data",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.eks.module.eks_managed_node_group[\"example\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.eks.module.eks_managed_node_group[\"example\"]",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.eks.module.eks_managed_node_group[\"example\"]",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    }
  ]
}